--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,17 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#florida {
+    background-color: #3f5624;
+}
+
+
+#paris {
+    background-color: #65f8;
+}
+
+
+#scotland {
+    background-color: #5fa2bc;
+}
